--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "node ."
+  },
   "author": "Ali Nagy (alinagy50@gmail.com)",
   "license": "ISC",
   "dependencies": {
